<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/createaccointtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/inputs"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/enter_full_names"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""

            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"

            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateofbirth2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:autofillHints="dateofbirth"
                android:ems="10"
                android:hint="@string/yr_mm_dd"
                android:inputType="text"
                android:minHeight="48dp"
                android:text=""
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/baseline_calendar_month_24" />
        </LinearLayout>

        <EditText
            android:id="@+id/dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="dateofbirth"
            android:ems="10"
            android:hint="@string/yr_mm_dd"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/enter_password"

            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/passtwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/confrim_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:textSize="18sp"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clickcreateaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</LinearLayout>